--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
         Current tasks:
         </p>
             <ul>
-                <li class="list">Add visual styles</li>
-                <li class="list">Add light and dark themes</li>
-                <li>Enable switching the theme</li>
+                <li class="list">Give this file a name</li>
+                <li class="list">create a navigation bar with proper links</li>
+                <li>Create accompanying links: About Me, Socials, Projects, Contact Me, Maxwell Auto Detailing</li>
+                <li class="list">Update light and dark themes</li>
+                <li class="list">Learn Website styling. Maybe start on a "hero image", 
+                    from which you can scroll from, which includes photograph cut-outs of my tangible projects (think apple website homepage), 
+                    stylized photographs (think of NIGHTRIDE presets) of me/personality/hobbies/intangible projects</li>
+                    <li class="list">create a database (primarily for M.A.D side-gig), and then link contact me/suggestions to a table within that DB</li>
+                
             </ul>
             
             <div>
@@ -26,6 +32,5 @@
 
             <script src="app.js"></script>
             <noscript>Oh no! You're a loser who can't display JavaScript! Enable it or exit the site!</noscript>
-
     </body>
 </html>
