Updated unordered list in index.html

--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
         Current tasks:
         </p>
             <ul>
-                <li>Give this file a name</li>
-                <li>create a navigation bar with proper links</li>
-                <li>Create accompanying links: About Me, Socials, Projects, Contact Me, Maxwell Auto Detailing</li>
-                <li>Update light and dark themes</li>
+                <li>finish the navigation bar by adding the other pages:</li>
+                <li>Create accompanying links: Projects, Contact Me, Maxwell Auto Detailing</li>
+                <li>Update light and dark themes, and figure out how to make the changes stay after page change</li>
                 <li>Learn Website styling. Maybe start on a "hero image", 
                     from which you can scroll from, which includes photograph cut-outs of my tangible projects (think apple website homepage), 
                     stylized photographs (think of NIGHTRIDE presets) of me/personality/hobbies/intangible projects</li>
-                <li>create a database (primarily for M.A.D side-gig), and then link contact me/suggestions to a table within that DB</li>
+                <li>create a database (primarily for M.A.D side-gig), and then link contact me/suggestions to a table within that DB like Pauls Online Notes</li>
                 
             
             <div>
